# alphaquant-ai

./: .env.example  .gitignore  AGENTS.md  Dockerfile.standalone  Procfile  README.md  RELEASE.md  build_executable.py  docker-compose.standalone.yml  launch.bat  launch.py  launch.sh  package.json  pyproject.toml  requirements.txt
backend/: __init__.py  main.py
backend/ai/: __init__.py
backend/ai/providers/: __init__.py  base.py  factory.py  http.py
backend/api/: __init__.py
backend/api/v1/: __init__.py  analysis.py  auth.py  health.py  market.py  research.py  router.py  stocks.py  ws.py
backend/cache/: __init__.py  redis_client.py
backend/core/: __init__.py  exception_handlers.py  exceptions.py  logging.py  responses.py  security.py
backend/core/config/: __init__.py  settings.py
backend/database/: __init__.py  base.py  session.py
backend/datasource/: __init__.py  manager.py
backend/datasource/providers/: __init__.py  akshare_provider.py  (+9 more)
backend/indicators/: __init__.py  base.py  calculator.py  momentum.py  trend.py  volatility.py  volume.py
backend/middleware/: __init__.py
backend/models/: __init__.py  analysis.py  portfolio.py  research.py  stock.py  user.py  watchlist.py
backend/repository/: __init__.py  base.py
backend/scheduler/: __init__.py  jobs.py
backend/schemas/: __init__.py  analysis.py  auth.py  common.py  financial.py  research.py  stock.py
backend/services/: __init__.py  analysis_service.py  research_scoring_service.py  research_service.py  scoring_service.py  stock_service.py
backend/tasks/: __init__.py  celery_app.py  market_tasks.py
backend/tests/: __init__.py  test_analysis_fallback.py  test_market_providers.py  test_research_scoring.py
backend/utils/: __init__.py
backend/websocket/: __init__.py  manager.py
deploy/: README.md
docker/: Dockerfile.backend  Dockerfile.frontend  docker-compose.yml  nginx.conf
docs/: API.md  ARCHITECTURE.md
frontend/: index.html  package-lock.json  package.json  pnpm-lock.yaml  tsconfig.json  vite.config.ts
frontend/public/: _redirects
frontend/src/: App.vue  main.ts
functions/api/: [[path]].ts
scripts/: init_data.py  init_db.py  test_api.py
(+45 files in other folders)
