[project]
name = "alphaquant-ai"
version = "0.1.0"
description = "Production-grade AI stock analysis platform."
requires-python = "==3.11.9"
readme = "README.md"
authors = [{ name = "AlphaQuant AI Team" }]
dependencies = [
    "fastapi>=0.115.0,<1.0.0",
    "uvicorn[standard]>=0.30.0,<1.0.0",
    "pydantic>=2.8.0,<3.0.0",
    "pydantic-settings>=2.4.0,<3.0.0",
    "email-validator>=2.2.0,<3.0.0",
    "sqlalchemy[asyncio]>=2.0.32,<3.0.0",
    "asyncpg>=0.29.0,<1.0.0",
    "aiomysql>=0.2.0,<1.0.0",
    "aiosqlite>=0.20.0,<1.0.0",
    "alembic>=1.13.2,<2.0.0",
    "redis>=5.0.8,<6.0.0",
    "celery>=5.4.0,<6.0.0",
    "apscheduler>=3.10.4,<4.0.0",
    "httpx>=0.27.0,<1.0.0",
    "loguru>=0.7.2,<1.0.0",
    "python-jose[cryptography]>=3.3.0,<4.0.0",
    "passlib[bcrypt]>=1.7.4,<2.0.0",
    "python-multipart>=0.0.9,<1.0.0",
    "pandas>=2.2.2,<3.0.0",
    "numpy>=1.26.4,<2.0.0",
    "akshare>=1.14.0",
    "tushare>=1.4.0",
    "baostock>=0.8.9",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.3.0,<9.0.0",
    "pytest-asyncio>=0.23.8,<1.0.0",
    "pytest-cov>=5.0.0,<6.0.0",
    "ruff>=0.5.6,<1.0.0",
    "black>=24.8.0,<25.0.0",
    "isort>=5.13.2,<6.0.0",
    "mypy>=1.11.1,<2.0.0",
]

[tool.black]
line-length = 88
target-version = ["py311"]

[tool.isort]
profile = "black"
line_length = 88
known_first_party = ["backend"]

[tool.ruff]
line-length = 88
target-version = "py311"
src = ["backend"]

[tool.ruff.lint]
select = [
    "E",
    "F",
    "I",
    "B",
    "UP",
    "N",
    "ANN",
    "ASYNC",
    "S",
    "C4",
    "SIM",
    "PTH",
    "RUF",
]
ignore = [
    "ANN101",
    "ANN102",
    "S101",
]

[tool.mypy]
python_version = "3.11"
plugins = ["pydantic.mypy", "sqlalchemy.ext.mypy.plugin"]
strict = true
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
ignore_missing_imports = true

[tool.pytest.ini_options]
minversion = "8.0"
addopts = "-ra --strict-markers --strict-config --cov=backend --cov-report=term-missing"
asyncio_mode = "auto"
testpaths = ["backend/tests"]
python_files = ["test_*.py"]
